# bamsam

./: Cargo.toml
data/: multreads.sam  multreadsbam.bam  reads.sam  readsbam.bam  ref.fasta  sorted_readsbam.bam  sorted_readsbam.bam.bai  test1.bam  test1.sam  test2.sam
src/: main.rs  runner.rs
src/statistic/: linecount.rs  mod.rs  qualfilter.rs  regfilter.rs
