[package]
name = "bamsam"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
flate2 = "1.1.0"  # Can decompress gzipped file on the fly
serde = {version = "1.0.219", features = ["derive"]}  # Enables (de)serialization of structs into various formats
serde_json = "1.0.140"  # Implements (de)serialization of structs to/from JSON